[gd_scene load_steps=18 format=3 uid="uid://duobrku8kiao7"]

[ext_resource type="Script" path="res://Scripts/game_won.gd" id="1_fji0a"]
[ext_resource type="Texture2D" uid="uid://b07ef8f53jtt2" path="res://Assets/cat bowl.png" id="2_1idrr"]
[ext_resource type="Texture2D" uid="uid://dmyx0apjvh3bg" path="res://Assets/dogbowl.png" id="3_b7nt7"]
[ext_resource type="FontFile" uid="uid://cbqxfolwklsky" path="res://Assets/QuinqueFive.otf" id="4_0reqj"]
[ext_resource type="Texture2D" uid="uid://be40qcbfs6dt1" path="res://Assets/dogjump1.png" id="5_h8mhm"]
[ext_resource type="Texture2D" uid="uid://cbcmkmil2q2ql" path="res://Assets/Sprite-0001-Recovered2.png" id="5_p366k"]
[ext_resource type="Texture2D" uid="uid://cbjredmhnm3bv" path="res://Assets/Sprite-0002-Recovered1.png" id="6_djq2w"]
[ext_resource type="Texture2D" uid="uid://8unvtfsv4h5b" path="res://Assets/catjump1.png" id="6_i56l6"]
[ext_resource type="Texture2D" uid="uid://65tcc6oux0ub" path="res://Assets/party hat.png" id="7_2t16l"]
[ext_resource type="Texture2D" uid="uid://c40m6ekwwuj16" path="res://Assets/ballons.png" id="8_pte3r"]
[ext_resource type="AudioStream" uid="uid://v08maxy4qglu" path="res://Assets/mixkit-video-game-win-2016.wav" id="11_dv1hw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8taaf"]
radius = 16.0312

[sub_resource type="Theme" id="Theme_k3sww"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_e6d7r"]
default_font_size = 25

[sub_resource type="Theme" id="Theme_vpf0r"]
default_font_size = 25

[sub_resource type="Animation" id="Animation_uohu0"]
resource_name = "ui_visibility"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q5po1"]
_data = {
"ui_visibility": SubResource("Animation_uohu0")
}

[node name="GameWon" type="Area2D"]
process_mode = 3
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fji0a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -12)
shape = SubResource("CircleShape2D_8taaf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(191, -12)
shape = SubResource("CircleShape2D_8taaf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-12, -19)
scale = Vector2(1.07813, 1.03125)
texture = ExtResource("2_1idrr")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(181, -17)
scale = Vector2(1.07813, 1.03125)
texture = ExtResource("3_b7nt7")

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="Menu" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.34902, 0.486275, 0.956863, 1)

[node name="Container" type="ColorRect" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 27.0
offset_right = -39.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.403922, 0.560784, 1, 1)

[node name="Border" type="ColorRect" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.501961, 0.670588, 1, 1)

[node name="Label" type="Label" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 64.0
offset_right = 312.0
offset_bottom = 111.0
grow_horizontal = 2
theme = SubResource("Theme_k3sww")
theme_override_colors/font_color = Color(0, 0.478431, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0.682353, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.85098, 0, 1)
theme_override_fonts/font = ExtResource("4_0reqj")
theme_override_font_sizes/font_size = 40
text = "You Won!"
uppercase = true

[node name="TimeCompleted" type="ColorRect" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -95.0
offset_right = 50.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="UI/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_right = 546.0
offset_bottom = 23.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_0reqj")
theme_override_font_sizes/font_size = 25
text = "Time: "

[node name="Value" type="Label" parent="UI/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_right = -258.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_0reqj")
text = "0	"

[node name="RestartButton" type="Button" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 249.0
offset_top = -297.0
offset_right = 824.0
offset_bottom = -207.0
grow_vertical = 0
theme = SubResource("Theme_e6d7r")
theme_override_fonts/font = ExtResource("4_0reqj")
text = "Restart"

[node name="ContinueButton" type="Button" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = -197.0
offset_right = 827.0
offset_bottom = -107.0
grow_vertical = 0
theme = SubResource("Theme_vpf0r")
theme_override_fonts/font = ExtResource("4_0reqj")
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="UI/Menu"]
position = Vector2(150, 520)
scale = Vector2(6.89844, 5.75)
texture = ExtResource("5_h8mhm")

[node name="Sprite2D2" type="Sprite2D" parent="UI/Menu"]
position = Vector2(1023, 526)
scale = Vector2(6.89844, 5.75)
texture = ExtResource("6_i56l6")

[node name="Sprite2D3" type="Sprite2D" parent="UI/Menu"]
position = Vector2(963, 491)
scale = Vector2(0.980468, 1.25)
texture = ExtResource("7_2t16l")

[node name="Sprite2D4" type="Sprite2D" parent="UI/Menu"]
position = Vector2(208, 460)
scale = Vector2(0.980468, 1.25)
texture = ExtResource("7_2t16l")

[node name="Sprite2D6" type="Sprite2D" parent="UI/Menu"]
position = Vector2(802.956, 118.924)
scale = Vector2(1.47013, 1.52887)
texture = ExtResource("8_pte3r")

[node name="Sprite2D5" type="Sprite2D" parent="UI/Menu"]
position = Vector2(297, 116)
scale = Vector2(1.72461, 1.57812)
texture = ExtResource("8_pte3r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q5po1")
}

[node name="Story" type="Popup" parent="."]
process_mode = 3
size = Vector2i(1152, 648)

[node name="Menu" type="ColorRect" parent="Story"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.14902, 0.545098, 1)

[node name="Container" type="ColorRect" parent="Story/Menu"]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 1080.0
offset_bottom = 580.0
color = Color(0.356863, 0.388235, 0.682353, 1)

[node name="Label" type="Label" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 350.0
offset_top = 40.0
offset_right = 890.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("4_0reqj")
theme_override_font_sizes/font_size = 33
text = "Congrats!"

[node name="FinalButton" type="Button" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 950.0
offset_right = 1000.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("4_0reqj")
theme_override_font_sizes/font_size = 26
text = "x"

[node name="ColorRect" type="ColorRect" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 120.0
offset_right = 90.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="Story/Menu/Container/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_0reqj")
theme_override_font_sizes/font_size = 15
text = "Frinci and Rosie have got all their treats back


"
horizontal_alignment = 2

[node name="ColorRect2" type="ColorRect" parent="Story/Menu/Container"]
layout_mode = 0
offset_left = 90.0
offset_top = 180.0
offset_right = 90.0
offset_bottom = 180.0

[node name="Label" type="Label" parent="Story/Menu/Container/ColorRect2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_0reqj")
theme_override_font_sizes/font_size = 15
text = "thank you for helping them collect them all!!"
horizontal_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="Story/Menu/Container"]
position = Vector2(120, 458.722)
scale = Vector2(2, 2)
texture = ExtResource("2_1idrr")

[node name="Sprite2D2" type="Sprite2D" parent="Story/Menu/Container"]
position = Vector2(815, 457.722)
scale = Vector2(2, 2)
texture = ExtResource("3_b7nt7")

[node name="Sprite2D3" type="Sprite2D" parent="Story/Menu/Container"]
position = Vector2(669, 410.722)
scale = Vector2(5, 5)
texture = ExtResource("5_p366k")

[node name="Sprite2D4" type="Sprite2D" parent="Story/Menu/Container"]
position = Vector2(294, 410.722)
scale = Vector2(5, 5)
texture = ExtResource("6_djq2w")

[node name="won" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_dv1hw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="UI/Menu/Container/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/Menu/Container/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Story/Menu/Container/FinalButton" to="." method="_on_final_button_pressed"]
